--- a/Mongolian gaming community/index.html
+++ b/Mongolian gaming community/index.html
@@ -1,2 +1,14 @@
-<h1>server</h1>
-<p>please open the door  </p>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Ganbat and Iveel</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <script src='main.js'></script>
+</head>
+<body>
+    <h1 class="luffy">Ganbat</h1>
+</body>
+</html>
