--- a/Mongolian gaming community/index.html
+++ b/Mongolian gaming community/index.html
@@ -9,6 +9,6 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <h1 class="luffy">Ganbat</h1>
+    <h1 class="hungry">apple pen pineapple pen</h1>
 </body>
 </html>
