--- a/Mongolian gaming community/index.html
+++ b/Mongolian gaming community/index.html
@@ -1,14 +1,2 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Ganbat and Iveel</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
-</head>
-<body>
-    <h1 class="hungry">apple pen pineapple pen</h1>
-</body>
-</html>
+<h1>my server</h1>
+<p style="color: gold;">jijighen degdeehei jiw jiw jiw hooron baysaad jiw jiw jiw amaa angaagaad jiw jiw jiw toglii toglii jiw jiw jiw bujiglii bujiglii jiw jiw jiw </p>
