--- a/Mongolian gaming community/index.html
+++ b/Mongolian gaming community/index.html
@@ -1,2 +1,12 @@
-<h1>my server</h1>
-<p style="color: gold;">jijighen degdeehei jiw jiw jiw hooron baysaad jiw jiw jiw amaa angaagaad jiw jiw jiw toglii toglii jiw jiw jiw bujiglii bujiglii jiw jiw jiw</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1 class="server"Iveel>s</h1>
+</body>
+</html>
